# KinectFusion

./: .gitignore  CMakeLists.txt  Eigen.h  README.md  Raycasting.h  main.cpp  main.cu
core/: PoseEstimation.h  RayCastingSimple.cpp  Raycasting.cpp  RaycastingSimple.h  VolumetricFusion.h  declarations.h  frame.h  preprocessing.h  raycasting.h
preprocessing/: Eigen.h  VirtualSensor.h  readCamera.h
